WIP progress chat broadcast
